force-app/main/default/objects/lw_docgen__Report_Configuration__c/fields/lw_docgen__File_Name_Template__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__File_Name_Template__c</fullName>
    <description>Template for generated file names. Supports placeholders: {{param:ParameterName}}, {{date:FORMAT}}, {{field:FieldPath}}. Example: Invoice_{{field:Account.Name}}_{{date:YYYY-MM-DD}}</description>
    <inlineHelpText>Use {{param:Name}} for parameters, {{date:YYYY-MM-DD}} for dates, {{field:Name}} for record fields. Leave blank for default naming.</inlineHelpText>
    <label>File Name Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>