force-app/main/default/objects/lw_docgen__Report_Configuration__c/fields/lw_docgen__Nintex_Fallback_URL__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Nintex_Fallback_URL__c</fullName>
    <label>Nintex Fallback URL</label>
    <type>Url</type>
</CustomField>