force-app/main/default/objects/lw_docgen__Report_Configuration__c/fields/lw_docgen__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>