force-app/main/default/objects/lw_docgen__Report_Configuration__c/fields/lw_docgen__Output_Format__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Output_Format__c</fullName>
    <label>Output Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>XLSX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>