force-app/main/default/objects/lw_docgen__Report_Configuration__c/listViews/lw_docgen__All.listView-meta.xml
<ListView>
    <fullName>lw_docgen__All</fullName>
    <columns>NAME</columns>
    <columns>lw_docgen__Object_Type__c</columns>
    <columns>lw_docgen__PowerBI_Report_Name__c</columns>
    <columns>lw_docgen__Priority__c</columns>
    <columns>lw_docgen__Output_Format__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>